avançando bastante, tá mais perto que longe

--- a/assets/scss/global/_vars.scss
+++ b/assets/scss/global/_vars.scss
@@ -1,5 +1,5 @@
 // Sass Variables
-$color-primary: #21cdc0;
+$color-primary: #00989E;
 $color-secondary: #213360;
 $color-heading: #0e204d;
 $color-body: #848e9f;
