--- a/assets/scss/layout/_icons.scss
+++ b/assets/scss/layout/_icons.scss
@@ -17,14 +17,14 @@
             position: relative;
             z-index: 2;
             display: block;
-            width: 23px;
-            height: 23px;
-            line-height: 23px;
+            width: 25px;
+            height: 25px;
+            line-height: 25px;
             border-radius: 50%;
-            font-size: 12px;
+            font-size: 11px;
             text-align: center;
-            color: $color-white;
-            background-color: $color-secondary;
+            color: $color-primary;
+            background-color: $color-white;
             @include prefix(transition, all 0.4s linear, webkit moz o);
 
             &:hover {
