--- a/assets/scss/module/_footer.scss
+++ b/assets/scss/module/_footer.scss
@@ -3,12 +3,24 @@
 --------------------------*/
 .footer {
     .footer-primary {
-        padding-top: 85px;
-        padding-bottom: 60px;
-        background-color: #1d2a4d;
+        padding-top: 60px;
+        padding-bottom: 40px;
+        background-color: $color-primary;
+    }
+
+    .itens-footer1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .descricao-footer{
+        color: $color-white;
+        text-align: center;
     }
 
     .footer-secondary {
+
         position: relative;
         padding: 46px 0;
         background-color: $color-white;
@@ -24,102 +36,8 @@
         }
     }
 
-    [class*="footer-widget"] {
-        margin-bottom: 30px;
-    }
-
-    .footer-widget__title {
-        color: $color-white;
-        font-size: 16px;
-        text-transform: capitalize;
-        margin-bottom: 30px;
-    }
-
-    .contact-list li {
-        line-height: 26px;
-        margin-bottom: 0;
-    }
-
-    .footer-widget-contact {
-        position: relative;
-        overflow: hidden;
-        padding: 40px;
-        border-radius: 15px;
-        background-color: $color-white;
-
-        &:before {
-            content: "\e916";
-            font-family: icomoon;
-            position: absolute;
-            right: -30px;
-            bottom: -15px;
-            font-size: 170px;
-            line-height: 1;
-            color: rgba(40, 59, 106, 0.05);
-            transform: rotate(-20deg);
-            z-index: 0;
-        }
-
-        &:after {
-            content: '';
-            position: absolute;
-            top: 40px;
-            bottom: 40px;
-            left: 0;
-            width: 3px;
-            background-color: $color-primary;
-        }
-    }
-
-    .footer-widget-nav li a {
-        display: block;
-        position: relative;
-        color: $color-body;
-        font-size: 14px;
-        margin-bottom: 11px;
-
-        &:hover {
-            color: $color-primary;
-        }
-    }
-
-    .footer__copyright-links li {
-        a {
-            color: $color-body;
-            display: block;
-            margin-right: 25px;
-            padding: 3px 0;
-
-            &:hover {
-                color: $color-primary;
-            }
-        }
-
-        &:last-child a {
-            margin-right: 0;
-        }
-    }
-
-    .phone__number {
+    .contato_topo {
         margin: 20px 0;
-    }
-}
-
-.phone__number {
-    display: inline-flex;
-    align-items: center;
-    font-family: $font-heading;
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 1;
-    color: #3851a2 !important;
-
-    &:hover {
-        color: $color-primary !important;
-    }
-
-    i {
-        margin-right: 7px;
     }
 }
 
@@ -170,6 +88,10 @@
         .footer-secondary {
             padding: 20px 0;
 
+            .cookies-privacidade{
+                margin-top: 50px;
+            }
+
             &:after {
                 left: 20px;
                 right: 20px;
@@ -198,7 +120,7 @@
             font-size: 13px;
         }
 
-        .phone__number {
+        .contato_topo {
             margin: 10px 0;
         }
     }
