--- a/assets/scss/module/_header.scss
+++ b/assets/scss/module/_header.scss
@@ -238,9 +238,9 @@
     }
 }
 
-@media (max-width: 1350px) {
+@media (max-width: 1367px) {
     .lista_contato{
-        display: none;
+        font-size: 12px;
     }
 }
 
