--- a/assets/scss/layout/_pagetitle.scss
+++ b/assets/scss/layout/_pagetitle.scss
@@ -50,6 +50,11 @@
     }
 }
 
+.icon-title{
+    max-width: 60px;
+    margin-top: -10px;
+}
+
 .page-title-layout2 {
     .pagetitle__desc {
         font-size: 20px;
@@ -76,6 +81,11 @@
             border-radius: 50%;
             border: 1px solid $color-white;
         }
+
+        img{
+            max-width: 65px;
+            margin-top: -10px;
+        }
     }
 
     .scroll-down {
@@ -95,45 +105,6 @@
         opacity: 1;
         background-color: transparent;
         background-image: linear-gradient(180deg, #FFFFFF26 47%, $color-white 76%);
-    }
-}
-
-.page-title-layout3 {
-    padding-bottom: 250px;
-}
-
-.page-title-layout5 {
-    padding-top: 80px;
-    padding-bottom: 80px;
-}
-
-.page-title-layout6 {
-    .testimonials__rating {
-        .overall__rate {
-            border-color: $color-white;
-        }
-
-        span,
-        .total__rate,
-        .overall__rate {
-            color: $color-white;
-        }
-    }
-}
-
-@media (min-width:1200px) {
-    .page-title-layout4 {
-        padding-top: 140px;
-        padding-bottom: 140px;
-
-        .pagetitle__desc {
-            padding: 0 40px;
-        }
-    }
-
-    .page-title-layout6 {
-        padding-top: 320px;
-        padding-bottom: 40px;
     }
 }
 
@@ -173,7 +144,4 @@
         }
     }
 
-    .page-title-layout3 {
-        padding-bottom: 170px;
-    }
 }
