--- a/assets/scss/module/_gallery.scss
+++ b/assets/scss/module/_gallery.scss
@@ -5,7 +5,19 @@
     .slick-list {
         margin: 0;
         overflow: hidden;
+    }
+
+    img{
+        max-width: 263px;
+        height: 91px;
         border-radius: 12px;
+        margin: 0;
+        padding: 0;
+    }
+
+    .img-convenio{
+        display: flex;
+        justify-content: center;
     }
 
     .slick-slide {
