--- a/assets/scss/module/_testimonial.scss
+++ b/assets/scss/module/_testimonial.scss
@@ -82,106 +82,35 @@
     }
 }
 
-.testimonials-layout2,
-.testimonials-layout3 {
-    .slick-dots {
-        display: none !important;
-    }
+// .testimonials__rating {
+//     position: relative;
+//     max-width: 300px;
+//     padding: 20px 0px 20px 30px;
 
-    .slider-nav {
-        max-width: 550px;
-    }
+//     &:before {
+//         content: '';
+//         position: absolute;
+//         top: 0;
+//         left: -10px;
+//         width: 143px;
+//         height: 95px;
+//         background-image: url(../images/icons/text-shape.png);
+//     }
 
-    .testimonial__meta {
-        padding-top: 10px;
-        display: flex;
-        align-items: center;
+//     .total__rate {
+//         font-family: $font-heading;
+//         font-size: 38px;
+//         font-weight: 700;
+//         color: $color-primary;
+//         margin-right: 10px;
+//     }
 
-        .testimonial__thmb {
-            position: relative;
-            width: 65px !important;
-            height: 65px;
-            padding: 6px;
-            margin-bottom: 0;
-            margin-right: 15px;
-
-            &:before {
-                font-family: icomoon;
-                content: "\e95c";
-                position: absolute;
-                top: -5px;
-                left: -5px;
-                font-size: 12px;
-                opacity: 0;
-                width: 30px;
-                height: 30px;
-                line-height: 30px;
-                border-radius: 50%;
-                text-align: center;
-                color: $color-primary;
-                background-color: $color-white;
-                @include prefix(transition, all 0.4s ease, webkit moz ms o);
-            }
-        }
-
-        &.slick-current {
-            .testimonial__thmb:before {
-                opacity: 1;
-            }
-        }
-    }
-}
-
-.testimonials-layout3 {
-    padding-bottom: 290px;
-
-    +.contact-layout2 {
-        margin-top: -240px;
-    }
-
-    .testimonial__title,
-    .testimonial__meta-title {
-        color: $color-white;
-    }
-
-    .testimonial__meta-desc {
-        color: $color-body;
-    }
-
-    .testimonial__meta.slick-current .testimonial__thmb {
-        background-color: $color-secondary;
-    }
-}
-
-.testimonials__rating {
-    position: relative;
-    max-width: 300px;
-    padding: 20px 0px 20px 30px;
-
-    &:before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: -10px;
-        width: 143px;
-        height: 95px;
-        background-image: url(../images/icons/text-shape.png);
-    }
-
-    .total__rate {
-        font-family: $font-heading;
-        font-size: 38px;
-        font-weight: 700;
-        color: $color-primary;
-        margin-right: 10px;
-    }
-
-    .overall__rate {
-        font-weight: 700;
-        color: $color-secondary;
-        border-bottom: 2px solid $color-secondary;
-    }
-}
+//     .overall__rate {
+//         font-weight: 700;
+//         color: $color-secondary;
+//         border-bottom: 2px solid $color-secondary;
+//     }
+// }
 
 @media (min-width:1300px) {
     .testimonials-layout1 {
@@ -206,23 +135,4 @@
         font-size: 13px;
     }
 
-    .testimonials-layout2 {
-        .testimonial__meta {
-
-            .testimonial__thmb {
-                position: relative;
-                width: 40px !important;
-                height: 40px;
-                padding: 3px;
-                margin-right: 8px;
-
-                &:before {
-                    font-size: 9px;
-                    width: 20px;
-                    height: 20px;
-                    line-height: 20px;
-                }
-            }
-        }
-    }
 }
