ajustes responsivos no header

--- a/assets/scss/global/_global.scss
+++ b/assets/scss/global/_global.scss
@@ -1,8 +1,8 @@
 /*--------------------------
-    Project Name: Medcity
+    Project Name: Hemolab
     Version: 1.0
-    Author: 7oorof
-    Relase Date: April 2021
+    Author: Leonardo Sobral
+    Relase Date: 2023
 ---------------------------*/
 /*---------------------------
       Table of Contents
