--- a/assets/scss/layout/_pagetitle.scss
+++ b/assets/scss/layout/_pagetitle.scss
@@ -83,9 +83,13 @@
         }
 
         img{
-            max-width: 65px;
-            margin-top: -10px;
+            max-width: 55px;
+            margin-top: -15px;
         }
+    }
+
+    #icon-exame{
+        margin-right: -6px;
     }
 
     .scroll-down {
