adição de botão de whats

--- a/assets/scss/module/_header.scss
+++ b/assets/scss/module/_header.scss
@@ -5,6 +5,11 @@
     position: relative;
     z-index: 1000;
 }
+@media (max-width: 998px) {
+    .botao-resultados{
+        margin-right: 15px;
+    }
+}
 
 /* Navbar */
 .navbar {
