--- a/assets/scss/module/_slider.scss
+++ b/assets/scss/module/_slider.scss
@@ -111,7 +111,7 @@
     }
 
     .slick-arrow {
-        transform: translateY(30px);
+        transform: translateY(60x);
     }
 
     .contact-panel-wrapper {
@@ -157,11 +157,11 @@
             }
 
             &.slick-next {
-                right: 20px;
+                right: 80px;
             }
 
             &.slick-prev {
-                left: 20px;
+                left: 80px;
             }
         }
 
