--- a/assets/scss/module/_about.scss
+++ b/assets/scss/module/_about.scss
@@ -9,14 +9,14 @@
     }
 }
 
-.about-layout1,
-.about-layout4 {
+.about-layout1 {
     .about__Text {
         padding: 0 40px;
-
+        max-width: 730px;
         p {
             font-size: 16px;
             color: $color-secondary;
+            
 
             &:first-of-type {
                 position: relative;
@@ -33,6 +33,9 @@
                 }
             }
         }
+    }
+    .about__Text2{
+        max-width: 695px;
     }
 }
 
