--- a/assets/scss/module/_accordion.scss
+++ b/assets/scss/module/_accordion.scss
@@ -1,6 +1,14 @@
 /*----------------------
     Accordions
 ------------------------*/
+.card-exames{
+    border-style: solid;
+    border-width: 2px;
+    border-color: #E6E8EB;
+    border-radius: 20px;
+    padding: 5%;
+}
+
 .accordion-item {
     padding: 22px 0;
     margin-top: -1px;
