--- a/assets/scss/module/_footer.scss
+++ b/assets/scss/module/_footer.scss
@@ -1,6 +1,50 @@
 /*-------------------------
     Footer
 --------------------------*/
+@media (max-width: 600px) {
+    .whats{
+        position: fixed;
+        top: 90%;
+        left: 80%;
+        z-index: 9999;
+        background-color: #25d366;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        border-radius: 50px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+    
+    .link-whats{
+        color: $color-white;
+        font-size: 30px;
+    }
+}
+
+@media (min-width: 601px) and (max-width: 998px) {
+    .whats{
+        position: fixed;
+        top: 91%;
+        left: 90%;
+        z-index: 9999;
+        background-color: #25d366;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        border-radius: 50px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+    
+    .link-whats{
+        color: $color-white;
+        font-size: 30px;
+    }
+}
+
+
+
 .footer {
     .footer-primary {
         padding-top: 60px;
