--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4173,10 +4173,14 @@ input[type=radio] {
   border-width: 2px;
   border-color: #E6E8EB;
   border-radius: 20px;
-  padding: 5%;
+  padding: 3%;
+  padding-top: 40px;
+  padding-bottom: 50px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
-/* line 12, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
+/* line 16, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
 .accordion-item {
   padding: 22px 0;
   margin-top: -1px;
@@ -4185,7 +4189,7 @@ input[type=radio] {
   background-color: #ffffff;
 }
 
-/* line 19, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
+/* line 23, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
 .accordion-item .accordion__title {
   font-family: "Quicksand", sans-serif;
   font-weight: 700;
@@ -4197,12 +4201,12 @@ input[type=radio] {
   color: #213360;
 }
 
-/* line 29, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
+/* line 33, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
 .accordion-item .accordion__title:hover {
   color: #00989E;
 }
 
-/* line 33, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
+/* line 37, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
 .accordion-item .accordion__title:after {
   position: absolute;
   left: 0;
@@ -4220,43 +4224,43 @@ input[type=radio] {
   background-color: #213360;
 }
 
-/* line 51, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
+/* line 55, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
 .accordion-item.opened {
   border-color: #00989E;
 }
 
-/* line 55, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
+/* line 59, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
 .accordion-item.opened .accordion__header:not(.collapsed) .accordion__title {
   color: #00989E;
 }
 
-/* line 58, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
+/* line 62, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
 .accordion-item.opened .accordion__header:not(.collapsed) .accordion__title:after {
   content: "\f107";
   background-color: #00989E;
 }
 
-/* line 66, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
+/* line 70, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
 .accordion-item .accordion__body {
   padding-top: 20px;
 }
 
-/* line 69, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
+/* line 73, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
 .accordion-item .accordion__body p {
   margin-bottom: 0;
 }
 
 /* Mobile Phones and tablets */
 @media (min-width: 320px) and (max-width: 767px) {
-  /* line 77, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
+  /* line 81, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
   .accordion-item {
     padding: 10px 15px;
   }
-  /* line 80, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
+  /* line 84, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
   .accordion-item .accordion__title {
     font-size: 14px;
   }
-  /* line 84, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
+  /* line 88, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_accordion.scss */
   .accordion-item .accordion__body p {
     font-size: 13px;
   }
@@ -5974,7 +5978,7 @@ input[type=radio] {
 
 /* line 29, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_sidebar.scss */
 .widget:last-child {
-  margin-bottom: 0;
+  margin-bottom: 50px;
 }
 
 /* line 33, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_sidebar.scss */
@@ -6508,7 +6512,7 @@ input[type=radio] {
 @media (min-width: 320px) and (max-width: 767px) {
   /* line 487, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_sidebar.scss */
   .widget {
-    padding: 15px;
+    padding: 30px;
   }
   /* line 490, D:/Leo Sobral Sites/Clientes/Hemolab/Desenvolvimento/Site/hemolab/assets/scss/module/_sidebar.scss */
   .widget:after {
