--- a/assets/scss/module/_accordion.scss
+++ b/assets/scss/module/_accordion.scss
@@ -6,7 +6,11 @@
     border-width: 2px;
     border-color: #E6E8EB;
     border-radius: 20px;
-    padding: 5%;
+    padding: 3%;
+    padding-top: 40px;
+    padding-bottom: 50px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .accordion-item {
