--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -2874,7 +2874,11 @@ input[type=radio] {
   border-width: 2px;
   border-color: #E6E8EB;
   border-radius: 20px;
-  padding: 5%;
+  padding: 3%;
+  padding-top: 40px;
+  padding-bottom: 50px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .accordion-item {
@@ -4149,7 +4153,7 @@ input[type=radio] {
   background-color: #00989E;
 }
 .widget:last-child {
-  margin-bottom: 0;
+  margin-bottom: 50px;
 }
 .widget .widget__title {
   font-size: 19px;
@@ -4535,7 +4539,7 @@ input[type=radio] {
 /* Mobile Phones and tablets */
 @media (min-width: 320px) and (max-width: 767px) {
   .widget {
-    padding: 15px;
+    padding: 30px;
   }
   .widget:after {
     top: 15px;
