--- a/assets/scss/layout/_lists.scss
+++ b/assets/scss/layout/_lists.scss
@@ -23,20 +23,23 @@
     font-weight: 700;
     margin-bottom: 9px;
 
-    &:before {
-        content: "\f00c";
-        font-family: "Font Awesome 5 Free";
-        font-weight: 900;
-        position: absolute;
-        top: 0;
-        left: 0;
-        font-size: 9px;
-        width: 22px;
-        height: 22px;
-        line-height: 22px;
-        text-align: center;
-        border-radius: 50%;
-        color: $color-primary;
+    &:before{
+
+        #local{
+            content: "\f3c5";
+            font-family: "Font Awesome 5 Free";
+            font-weight: 900;
+            position: absolute;
+            top: 0;
+            left: 0;
+            font-size: 9px;
+            width: 22px;
+            height: 22px;
+            line-height: 22px;
+            text-align: center;
+            border-radius: 50%;
+            color: $color-primary;
+        }
     }
 
     &:last-of-type {
