--- a/assets/scss/module/_header.scss
+++ b/assets/scss/module/_header.scss
@@ -11,6 +11,10 @@
     }
 }
 
+.logo-dark{
+    max-width: 150px;
+}
+
 /* Navbar */
 .navbar {
     padding: 0;
@@ -149,7 +153,7 @@
         align-items: center;
         font-family: $font-heading;
         font-weight: 700;
-        font-size: 20px;
+        font-size: 16px;
         line-height: 1;
         color: #1A274A !important;
     
@@ -224,6 +228,7 @@
 
     .logo-dark {
         display: inline-block;
+        max-width: 150px;
     }
 
     .navbar-nav {
@@ -231,9 +236,12 @@
     }
 }
 
-@media screen and (min-width: 991px) and (max-width: 1200px){
+@media screen and (min-width: 991px) and (max-width: 1366px){
     .navbar .navbar-brand{
         margin-right: 30px;
+    }
+    .navbar .nav__item{
+        margin-right: 17px;
     }
 }
 
@@ -247,7 +255,7 @@
     max-width: 205px;
 }
 
-@media screen and (min-width: 1337px) and (max-width: 1400px) {
+@media screen and (min-width: 1237px) and (max-width: 1400px) {
     .contato_topo{
         font-size: 13px !important;
     }
@@ -256,7 +264,7 @@
     }
 }
 
-@media (max-width: 1336px) {
+@media (max-width: 1230px) {
     .lista_contato{
         display: none;
     }
@@ -468,6 +476,10 @@
             max-width: 120px;
         }
     }
+}
+
+@media (max-width: 1300px){
+
 }
 
 /* Header Animation */
