--- a/assets/scss/module/_slider.scss
+++ b/assets/scss/module/_slider.scss
@@ -151,6 +151,7 @@
             width: 50px;
             height: 50px;
             line-height: 50px;
+            top: 360px;
 
             &:before {
                 font-size: 50px;
