--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -137,6 +137,11 @@ textarea {
     max-width: 100%;
   }
 }
+@media (min-width: 1024px) and (max-width: 1300px) {
+  .container {
+    max-width: 960px;
+  }
+}
 @media (max-width: 991px) {
   html,
 body {
@@ -1324,9 +1329,9 @@ h6 {
 .btn {
   position: relative;
   z-index: 1;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 700;
-  min-width: 170px;
+  min-width: 155px;
   height: 50px;
   display: inline-flex;
   align-items: center;
@@ -2063,8 +2068,8 @@ input[type=radio] {
   font-weight: 700;
   margin-bottom: 9px;
 }
-.list-items li:before {
-  content: "\f00c";
+.list-items li:before #local {
+  content: "\f3c5";
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   position: absolute;
@@ -2449,6 +2454,10 @@ input[type=radio] {
     margin-right: 15px;
   }
 }
+.logo-dark {
+  max-width: 150px;
+}
+
 /* Navbar */
 .navbar {
   padding: 0;
@@ -2565,7 +2574,7 @@ input[type=radio] {
   align-items: center;
   font-family: "Quicksand", sans-serif;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1;
   color: #1A274A !important;
 }
@@ -2631,14 +2640,18 @@ input[type=radio] {
 }
 .is-sticky .logo-dark {
   display: inline-block;
+  max-width: 150px;
 }
 .is-sticky .navbar-nav {
   margin-top: 0 !important;
 }
 
-@media screen and (min-width: 991px) and (max-width: 1200px) {
+@media screen and (min-width: 991px) and (max-width: 1366px) {
   .navbar .navbar-brand {
     margin-right: 30px;
+  }
+  .navbar .nav__item {
+    margin-right: 17px;
   }
 }
 @media (max-width: 1600px) {
@@ -2650,7 +2663,7 @@ input[type=radio] {
   max-width: 205px;
 }
 
-@media screen and (min-width: 1337px) and (max-width: 1400px) {
+@media screen and (min-width: 1237px) and (max-width: 1400px) {
   .contato_topo {
     font-size: 13px !important;
   }
@@ -2658,7 +2671,7 @@ input[type=radio] {
     max-width: 141px;
   }
 }
-@media (max-width: 1336px) {
+@media (max-width: 1230px) {
   .lista_contato {
     display: none;
   }
@@ -2873,7 +2886,7 @@ input[type=radio] {
   border-style: solid;
   border-width: 2px;
   border-color: #E6E8EB;
-  border-radius: 20px;
+  border-radius: 10px;
   padding: 3%;
   padding-top: 40px;
   padding-bottom: 50px;
@@ -2937,7 +2950,7 @@ input[type=radio] {
 /* Mobile Phones and tablets */
 @media (min-width: 320px) and (max-width: 767px) {
   .accordion-item {
-    padding: 10px 15px;
+    padding: 10px 0px;
   }
   .accordion-item .accordion__title {
     font-size: 14px;
@@ -3005,7 +3018,7 @@ input[type=radio] {
 @media (max-width: 600px) {
   .whats {
     position: fixed;
-    top: 90%;
+    top: 84%;
     left: 80%;
     z-index: 9999;
     background-color: #25d366;
@@ -3021,7 +3034,7 @@ input[type=radio] {
     font-size: 30px;
   }
 }
-@media (min-width: 601px) and (max-width: 998px) {
+@media (min-width: 601px) and (max-width: 992px) {
   .whats {
     position: fixed;
     top: 91%;
@@ -3273,6 +3286,7 @@ input[type=radio] {
     width: 50px;
     height: 50px;
     line-height: 50px;
+    top: 360px;
   }
   .slider .slick-arrow:before {
     font-size: 50px;
@@ -3757,106 +3771,6 @@ input[type=radio] {
   }
   .features-list .feature-item .feature__title {
     font-size: 11px !important;
-  }
-}
-/*-----------------------
-     fancybox 
-------------------------*/
-.fancybox-item {
-  position: relative;
-  border-radius: 10px;
-  margin-bottom: 30px;
-  transition: all 0.3s linear;
-}
-.fancybox-item .fancybox__icon {
-  font-size: 50px;
-  line-height: 1;
-  color: #00989E;
-}
-.fancybox-item .fancybox__title {
-  font-size: 19px;
-  margin-bottom: 16px;
-}
-.fancybox-item .fancybox__desc {
-  margin-bottom: 0;
-}
-.fancybox-item .fancybox__icon,
-.fancybox-item .fancybox__title,
-.fancybox-item .fancybox__desc {
-  transition: all 0.3s linear;
-}
-.fancybox-item:hover .fancybox__icon {
-  -webkit-animation: zoomOut 1s infinite alternate;
-  animation: zoomOut 1s infinite alternate;
-}
-.fancybox-item:hover .fancybox__title {
-  color: #00989E;
-}
-
-.fancybox-layout1 .fancybox-item,
-.fancybox-layout2 .fancybox-item {
-  padding: 40px;
-  border: 2px solid #e6e8eb;
-}
-.fancybox-layout1 .fancybox-item .fancybox__icon,
-.fancybox-layout2 .fancybox-item .fancybox__icon {
-  flex: 0 0 70px;
-}
-
-.fancybox-layout1 .fancybox-item:hover {
-  border-color: #ffffff;
-  box-shadow: 0px 5px 83px 0px rgba(9, 29, 62, 0.15);
-}
-
-.fancybox-layout2 .fancybox-item {
-  padding: 30px;
-}
-.fancybox-layout2 .fancybox-item .fancybox__title {
-  font-size: 18px;
-  margin-bottom: 6px;
-}
-.fancybox-layout2 .fancybox-item:hover {
-  border-color: #00989E;
-  background-color: #00989E;
-}
-.fancybox-layout2 .fancybox-item:hover .fancybox__title,
-.fancybox-layout2 .fancybox-item:hover .fancybox__desc,
-.fancybox-layout2 .fancybox-item:hover .fancybox__icon {
-  color: #ffffff;
-}
-
-.fancybox-layout3 .fancybox-item {
-  width: 270px;
-  padding: 37px 35px 30px;
-  background-color: #ffffff;
-}
-.fancybox-layout3 .fancybox-item .fancybox__icon {
-  flex: 0 0 70px;
-}
-.fancybox-layout3 .fancybox-item .fancybox__title {
-  font-size: 18px;
-}
-
-.fancybox-light .fancybox-item .fancybox__icon,
-.fancybox-light .fancybox-item .fancybox__title,
-.fancybox-light .fancybox-item:hover .fancybox__title {
-  color: #ffffff;
-}
-
-/* Mobile Phones and tablets */
-@media (min-width: 320px) and (max-width: 767px) {
-  .fancybox-item .fancybox__icon {
-    font-size: 40px;
-    margin-bottom: 5px;
-  }
-  .fancybox-item .fancybox__title {
-    font-size: 15px !important;
-    margin-bottom: 5px;
-  }
-  .fancybox-layout1 .fancybox-item,
-.fancybox-layout2 .fancybox-item,
-.fancybox-layout3 .fancybox-item {
-    padding: 20px;
   }
 }
 /*--------------------
@@ -4868,6 +4782,23 @@ input[type=radio] {
 /*-----------------------
     Services 
 --------------------------*/
+.fa-ul {
+  margin-left: 2rem !important;
+}
+.fa-ul li {
+  margin-bottom: 20px;
+  color: #222222;
+}
+.fa-ul li i {
+  color: #00989E;
+  margin-right: 10px;
+}
+
+#btn-unidades {
+  z-index: 2;
+  color: #ffffff;
+}
+
 .service-item {
   position: relative;
   overflow: hidden;
@@ -4888,7 +4819,7 @@ input[type=radio] {
   transition: all 0.4s linear;
 }
 .service-item .service__content {
-  padding: 40px;
+  padding: 30px;
 }
 .service-item .service__icon {
   color: #213360;
@@ -4948,7 +4879,7 @@ input[type=radio] {
 }
 .services-layout2 .service-item .service__title {
   font-size: 23px;
-  margin-bottom: 16px;
+  margin-bottom: 30px;
 }
 .services-layout2 .service-item .service__img {
   overflow: hidden;
@@ -4999,6 +4930,9 @@ input[type=radio] {
 }
 
 @media (min-width: 1200px) {
+  .slick-arrow {
+    top: -90px;
+  }
   .slick-arrow.slick-prev {
     left: 80%;
   }
@@ -5043,151 +4977,6 @@ input[type=radio] {
   }
 }
 /*-------------------------
-   Timeline
--------------------------*/
-.doctors-timetable th {
-  font-weight: 700;
-  color: #848e9f;
-  padding: 17px 15px;
-}
-.doctors-timetable th,
-.doctors-timetable td {
-  text-align: center;
-  vertical-align: middle;
-  border-radius: 14px;
-  border: 3px solid #ffffff;
-}
-.doctors-timetable thead {
-  background-color: #def8f6 !important;
-}
-.doctors-timetable tbody tr:nth-of-type(even) td:first-of-type {
-  min-width: 80px;
-  background-color: #def8f6 !important;
-}
-.doctors-timetable tbody tr td:first-of-type {
-  font-weight: 700;
-}
-.doctors-timetable .event {
-  padding: 27px 10px;
-  vertical-align: top;
-  color: #ffffff;
-  background-color: #435ba1;
-}
-.doctors-timetable .event .event__header {
-  font-family: "Quicksand", sans-serif;
-  display: block;
-  color: #ffffff !important;
-  font-size: 15px;
-  font-weight: bold;
-  margin-bottom: 2px;
-}
-.doctors-timetable .event .event__type {
-  font-size: 13px;
-}
-.doctors-timetable .event .doctor__name {
-  font-family: "Quicksand", sans-serif;
-  font-size: 14px;
-  font-weight: 700;
-}
-.doctors-timetable .event .event__time {
-  margin: 15px 0;
-}
-.doctors-timetable .event .event__time span {
-  display: block;
-}
-
-.timeline-item {
-  position: relative;
-}
-.timeline-item:before {
-  content: "";
-  position: absolute;
-  top: 8px;
-  left: 116px;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background-color: #00989E;
-  transition: 0.3s linear;
-}
-.timeline-item .timeline__year {
-  display: block;
-  position: relative;
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: 600;
-  flex: 0 0 80px;
-  max-width: 80px;
-  margin-right: 40px;
-  border-radius: 5px;
-  height: 30px;
-  margin-bottom: 0;
-  align-self: baseline;
-  padding: 5px 20px 5px 25px;
-  background-color: #213360;
-}
-.timeline-item .timeline__year:before {
-  position: absolute;
-  content: "";
-  height: 8px;
-  width: 8px;
-  left: 10px;
-  top: 50%;
-  border-radius: 50%;
-  transform: translateY(-50%);
-  background-color: #ffffff;
-}
-.timeline-item .timeline__year:after {
-  position: absolute;
-  content: "";
-  height: 20px;
-  width: 20px;
-  right: -8px;
-  top: 5px;
-  z-index: -1;
-  transform: rotate(45deg);
-  background-color: #213360;
-}
-.timeline-item .timeline__body {
-  position: relative;
-  font-size: 15px;
-  padding-left: 40px;
-  margin-bottom: 0;
-  padding-bottom: 48px;
-}
-.timeline-item .timeline__body:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -12px;
-  width: 24px;
-  height: 24px;
-  border-radius: 50%;
-  padding: 3px;
-  border: 2px solid #dcdee2;
-}
-.timeline-item .timeline__body:after {
-  content: "";
-  position: absolute;
-  top: 22px;
-  bottom: 0;
-  left: -1px;
-  width: 2px;
-  background-color: #dcdee2;
-}
-.timeline-item .timeline__title {
-  font-size: 19px;
-  font-weight: 600;
-  margin-bottom: 18px;
-}
-.timeline-item:hover:before {
-  transform: scale(1.3);
-}
-.timeline-item:last-of-type .timeline__body {
-  padding-bottom: 0;
-}
-
-/*-------------------------
    gallery
 -------------------------*/
 .gallery .slick-list {
@@ -5207,6 +4996,9 @@ input[type=radio] {
 }
 .gallery .slick-slide {
   margin: 0;
+}
+.gallery .slick-arrow {
+  top: 50px;
 }
 .gallery .slick-arrow.slick-next {
   right: -50px;
@@ -5250,49 +5042,4 @@ input[type=radio] {
   .gallery .slick-arrow.slick-prev {
     left: 0;
   }
-}
-/*-----------------------
-    Progress Bars
-------------------------*/
-.progress-item {
-  margin-bottom: 27px;
-  overflow: hidden;
-}
-
-.progress {
-  background-color: #e9e9e9;
-  border-radius: 6px;
-  width: 100%;
-  height: 6px;
-  overflow: visible;
-  position: relative;
-}
-
-.progress-bar {
-  overflow: visible;
-  position: relative;
-  border-radius: 6px;
-  height: 6px;
-  width: 0;
-  background-color: #00989E;
-  transition: width 2s ease;
-}
-
-.progress__title {
-  position: relative;
-  z-index: 2;
-  font-size: 15px;
-  font-weight: 700;
-  line-height: 1;
-  margin-bottom: 6px;
-}
-
-.progress__percentage {
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 1;
-  position: absolute;
-  top: -18px;
-  right: 0;
-  color: #848e9f;
 }/*# sourceMappingURL=style.css.map */
