--- a/assets/scss/module/_footer.scss
+++ b/assets/scss/module/_footer.scss
@@ -4,7 +4,7 @@
 @media (max-width: 600px) {
     .whats{
         position: fixed;
-        top: 84%;
+        top: 89%;
         left: 80%;
         z-index: 9999;
         background-color: #25d366;
@@ -22,7 +22,7 @@
     }
 }
 
-@media (min-width: 601px) and (max-width: 992px) {
+@media (min-width: 601px) and (max-width: 1240px) {
     .whats{
         position: fixed;
         top: 91%;
@@ -41,6 +41,14 @@
         color: $color-white;
         font-size: 30px;
     }
+}
+
+@media (min-width:1300px){
+    
+    .whats{
+        display: none;
+    }
+
 }
 
 
