--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,16 +9,10 @@
 @import "layout/typography";
 @import "layout/pagetitle";
 @import "layout/buttons";
-@import "layout/forms";
-@import "layout/tabs";
 @import "layout/icons";
-@import "layout/breadcrumb";
-@import "layout/pagination";
 @import "layout/lists";
 @import "layout/animation";
-@import "layout/alerts";
 @import "layout/carousel";
-@import "layout/preloader";
 
 // Modules
 @import "module/header";
@@ -27,10 +21,9 @@
 @import "module/footer";
 @import "module/slider";
 @import "module/video";
-@import "module/features";
-@import "module/team";
+@import "module/services";
+@import "module/certificados";
 @import "module/testimonial";
 @import "module/sidebar";
 @import "module/about";
-@import "module/services";
-@import "module/gallery";
+@import "module/convenios";
