Adição de imagem de unidades e vídeo

--- a/assets/scss/module/_header.scss
+++ b/assets/scss/module/_header.scss
@@ -293,7 +293,7 @@
 
     .separador{
         height: 30px;
-        border-right: 2px solid #e6e8eb;
+        border-right: 2px solid #E6E8EB;
         margin-right: 30px;
     }
 
