--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3381,6 +3381,21 @@ h6 {
   position: relative;
   z-index: 2;
 }
+
+.video-banner{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; 
+  height: 0;
+}
+.video-banner iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .video-banner img {
   border-radius: 15px;
 }
