--- a/assets/scss/module/_video.scss
+++ b/assets/scss/module/_video.scss
@@ -64,9 +64,21 @@
 .video-banner {
     position: relative;
     z-index: 2;
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; 
+    height: 0;
 
     img {
         border-radius: 15px;
+    }
+
+    iframe{
+        position: absolute;
+        top:0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
 
     .video__btn {
