--- a/assets/scss/module/_header.scss
+++ b/assets/scss/module/_header.scss
@@ -485,6 +485,14 @@
             max-width: 120px;
         }
     }
+
+    .header-layout2{
+        height: 140px;
+    }
+
+    #compra{
+        margin-left: 232px;
+    }
 }
 
 @media (max-width: 1300px){
